Improve views by using materialViews. Add image for a Task. Show image of task in task list. Add share button in task details dialog.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,3 +1,6 @@
+ext {
+    touchimageviewVersion = touchimageviewVersion
+}
 apply plugin: 'com.android.application'
 
 android {
@@ -21,6 +24,7 @@ android {
         }
     }
 }
+android.defaultConfig.vectorDrawables.useSupportLibrary = true
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
@@ -33,6 +37,9 @@ dependencies {
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.appcompat:appcompat:1.0.0'
     implementation 'androidx.appcompat:appcompat:1.0.0'
+    implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'com.github.MikeOrtiz:TouchImageView:1.4.1'
+    implementation 'com.github.MikeOrtiz:TouchImageView:3.0.1'
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
