--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.hfad.taskmanager">
 
-    <uses-feature android:name="android.hardware.camera"
+    <uses-feature
+        android:name="android.hardware.camera"
         android:required="true" />
+
+
 
 
     <application
@@ -13,7 +16,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".controller.activity.UserListActivity"></activity>
+        <activity android:name=".controller.activity.UserListActivity" />
         <activity android:name=".controller.activity.SignUpActivity" />
         <activity android:name=".controller.activity.LoginActivity">
             <intent-filter>
@@ -25,6 +28,18 @@
         <activity android:name=".controller.activity.TaskPagerActivity" />
         <activity android:name=".controller.activity.TaskListActivity" />
         <activity android:name=".controller.activity.BuildListActivity" />
+
+
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="com.hfad.taskmanager.controller.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths"></meta-data>
+        </provider>
+
     </application>
 
 </manifest>
